--- a/TODO
+++ b/TODO
@@ -5,3 +5,6 @@ In date: 16.3.2015
     Speed up the get_atom_distances.py script. Maybe multiproces? Deepesh would
     suggest writing it in C. I would prefer running it on a faster computer
     than my i3.
+
+    Result: Tried out multiprocessing with the python module. Overhead too
+    much. Will not work until a better way is sought out.
