--- a/TODO
+++ b/TODO
@@ -8,3 +8,5 @@ In date: 16.3.2015
 
     Result: Tried out multiprocessing with the python module. Overhead too
     much. Will not work until a better way is sought out.
+
+Closed: 19.3.2015
