--- a/TODO
+++ b/TODO
@@ -8,5 +8,7 @@ In date: 16.3.2015
 
     Result: Tried out multiprocessing with the python module. Overhead too
     much. Will not work until a better way is sought out.
-
 Closed: 19.3.2015
+
+In date: 2.4.2015
+    Check the ramachandran function.
